# PlantsVsDiseases

./: .gitignore  README.md  cli.py  pyproject.toml
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_summary.md
docs/infrastructure/: infrastructure_docs.md
greeneye/database/: DatasetBuilder.py  kaggle.py
greeneye/evaluation/: acc.py
greeneye/models/: imagenet.py  models.py
greeneye/preprocessing/: Pre.py  imagenetPrepros.py
greeneye/visualization/: viz.py
scripts/: CesarVillamizar-proyecto.ipynb  cli.py  proyecto.ipynb
scripts/data_acquisition/: main.py
