[tool.poetry]
name = "greeneye"
version = "0.1.0"
description = "Plant diseases detection"
authors = ["Cesar Villamizar <cavillamizarc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
kaggle = "^1.5.12"
joblib = "^1.2.0"
keras = "^2.11.0"
tensorflow = "^2.11.0"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cluster = "greeneye.cli:main"